sna: Tighten has_coherent_ptr() assertion

Pass along the flags for read/write direction so that we know whether or
not we expect the gpu bo to be in the CPU write domain.

Reported-by: Pavel Ondračka <pavel.ondracka@email.cz>
Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=70436
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>